Move Ramda from peerDep. to normal dependency

--- a/package.json
+++ b/package.json
@@ -15,13 +15,12 @@
     "extension"
   ],
   "main": "lib/index.js",
+  "dependencies": {
+    "ramda": "^0.25.0"
+  },
   "devDependencies": {
     "babel-cli": "^6.26.0",
-    "babel-preset-env": "^1.6.1",
-    "ramda": "*"
-  },
-  "peerDependencies": {
-    "ramda": "*"
+    "babel-preset-env": "^1.6.1"
   },
   "engines": {
     "node": ">=8.0.0"
