--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "main": "lib/index.js",
   "dependencies": {
     "@babel/core": "^7.2.2",
-    "babel-preset-env": "^1.7.0",
+    "@babel/preset-env": "^7.2.3",
     "ramda": "^0.26.1"
   },
   "devDependencies": {},
@@ -29,18 +29,6 @@
     "build": "babel src/ -d lib/",
     "prepare": "npm run build",
     "test": "echo \"Error: no tests available\" && exit 0"
-  },
-  "babel": {
-    "presets": [
-      [
-        "env",
-        {
-          "targets": {
-            "browsers": "> 1%"
-          }
-        }
-      ]
-    ]
   },
   "publishConfig": {
     "access": "public"
