--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@paqmind/ramda",
+  "name": "@paqmind/ramdax",
   "description": "Ramda extended with additional helpers",
   "version": "0.4.0",
   "author": "Ivan Kleshnin <ivan@paqmind.com> (paqmind.com)",
@@ -15,12 +15,13 @@
     "extension"
   ],
   "main": "lib/index.js",
-  "dependencies": {
+  "devDependencies": {
     "@babel/core": "^7.2.2",
-    "@babel/preset-env": "^7.2.3",
-    "ramda": "^0.26.1"
+    "@babel/preset-env": "^7.2.3"
   },
-  "devDependencies": {},
+  "peerDependencies": {
+    "ramda": ">=0.26.0"
+  },
   "engines": {
     "node": ">=10.0.0"
   },
